# rust-wast

./: .rustfmt.toml  Cargo.toml
examples/: wasm.rs
src/: ast.rs  errors.rs  func.rs  lib.rs  module.rs  ops.rs  parse.rs
src/parser/: assertion.rs  comment.rs  data.rs  elem.rs  export.rs  expr.rs  func.rs  global.rs  import.rs  instr.rs  macros.rs  memory.rs  mod.rs  module.rs  ops.rs  script.rs  skip.rs  start.rs  table.rs  token.rs  type_def.rs  typedef.rs  types.rs  typeuse.rs  values.rs  var.rs  whitespace.rs
tests/: spec.rs
